--- a/views/partials/Exam/list.ejs
+++ b/views/partials/Exam/list.ejs
@@ -17,7 +17,7 @@
         <tr dir-paginate="exam in exams | filter:q | itemsPerPage: pageSize" current-page="currentPage">
             <td>{{ exam.essay_num }}</td>
             <td>{{ exam.test_date | date }}</td>
-            <td><a href="/view2/{{exam.id}}">{{ exam.f_name }} {{ exam.m_initial }}, {{ exam.l_name }}</a></td>
+            <td><a href="/view2/{{exam.id}}">{{ exam.l_name }} {{ exam.m_initial }}, {{ exam.f_name }}</a></td>
             <td><p>{{ exam.final_placement_level }}</p></td>
             <td>
 
