Fixed the accuplacer defaults. Changed math and english level view

--- a/views/partials/Exam/detail.ejs
+++ b/views/partials/Exam/detail.ejs
@@ -15,10 +15,11 @@
                     <h3 class="panel-title">Total Placement Scoring</h3>
                 </div>
                 <div class="panel-body">
-                    <h4>Math Score: <span class="label label-default">{{ exam.math_score }}</span> </h4>
+                    <h4>Math Score: <span class="label label-default">{{ exam.math_score }}</span></h4>
                     <h4>ESL Accuplacer Score: <span class="label label-default">{{ exam.accuplacer_score }}</span> = <span class="label label-info">{{ exam.accuplacer_level }}</span></h4>
                     <h4>Writing Sample Score: <span class="label label-default">{{ exam.writing_sample_score }}</span> = <span class="label label-info">{{ exam.writing_sample_level }}</span></h4>
-                    <h3>Final Placement: <span class="label label-success">{{ exam.final_placement_level }}</span></h3>
+                    <h3>English Level: <span class="label label-success">{{ exam.final_placement_level }}</span></h3>
+                    <h3>Math Level: <span class="label label-success">{{ math_level }}</span></h3>
                 </div>
 
             </div>
