--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/view2"><i class="fa fa-lightbulb-o fa-fw"></i>Exams</a></li>
                     <li><a href="/view3"><i class="fa fa-lightbulb-o fa-fw"></i>Upload CSV</a></li>
+                    <li><a href="/view4"><i class="fa fa-lightbulb-o fa-fw"></i>Report</a> </li>
                 </ul>
             </div>
         </div>
