--- a/views/partials/Exam/detail.ejs
+++ b/views/partials/Exam/detail.ejs
@@ -1,9 +1,11 @@
-<div>
+<div class="hidden-print">
 
     <h1>{{ exam.l_name }} {{ exam.m_initial }}, {{ exam.f_name }}</h1>
     <p>{{ exam.test_date | date}}</p>
     <h2><span class="label label-default">{{ exam.essay_num }}</span></h2>
     Essay Number: <input ng-if="!essayNumPresent" ng-model="exam.essay_num" type="number"> <button ng-if="!essayNumPresent" class="btn btn-primary" ng-click="submitEssayNum()">Save</button>
+    <br>
+    <a href="javascript:window.print()" class="btn primary large hidden-print">Print</a>
     <hr>
     <div class="row">
 
@@ -12,7 +14,7 @@
 
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Total Placement Scoring</h3>
+                    <h3 class="panel-title">Placement Overall Score</h3>
                 </div>
                 <div class="panel-body">
                     <h4>Math Score: <span class="label label-default">{{ exam.math_score }}</span></h4>
@@ -111,7 +113,7 @@
 
         <div class="panel panel-primary col-md-6">
             <div class="panel-heading">
-                <h3 class="panel-title">CMI Placement Book Exam Results</h3>
+                <h3 class="panel-title">Accuplacer Test Results</h3>
             </div>
             <div class="panel-body">
                 <ul class="list-group">
@@ -154,4 +156,11 @@
     </div>
 
 
+</div>
+
+<!--For Printing-->
+<div class="panel visible-print">
+    <h1>{{ exam.l_name }} {{ exam.m_initial }}, {{ exam.f_name }}</h1>
+    <h2>English Level: {{ exam.accuplacer_level }}</h2>
+    <h2>English Total Score: {{ exam.lu_total_score + exam.ss_total_score + exam.rs_total_score }}</h2>
 </div>
