--- a/views/partials/Report/index.ejs
+++ b/views/partials/Report/index.ejs
@@ -1,5 +1,5 @@
 <div>
-    <h1>Report By Essay Dates</h1>
+    <h1>Report By Test Dates</h1>
     <form class="form-inline hidden-print">
         <div class="form-group">
             <input type="date" class="form-control" id="examDate" ng-model="testDateInput"/>
