--- a/views/partials/Exam/list.ejs
+++ b/views/partials/Exam/list.ejs
@@ -2,7 +2,7 @@
 
     <h2><span class="label label-default">{{ exams.length }} Total Exams</span></h2><br>
     <label for="search">Search: </label> <input id="search" placeholder="Filter Exams" ng-model="q">
-    <label for="search">Essay Number Search: </label> <input type="number" id="search" placeholder="Filter Essay Numbers" ng-model="exam.essay_num">
+    <label for="EssayNumberSearch">Essay Number Search: </label> <input type="number" id="EssayNumberSearch" placeholder="Filter Essay Numbers" ng-model="exam.essay_num">
     <br>
     <div class="panel">
     <table class="table table-hover">
@@ -19,7 +19,10 @@
             <td>{{ exam.essay_num }}</td>
             <td>{{ exam.test_date | date }}</td>
             <td><a href="/view2/{{exam.id}}">{{ exam.l_name }} {{ exam.m_initial }}, {{ exam.f_name }}</a></td>
-            <td><p>{{ exam.final_placement_level }}</p></td>
+            <td>
+                <p>English: {{ exam.final_placement_level }}</p>
+                <p>Math: {{ exam.math_level }}</p>
+            </td>
             <td>
 
                 <p></p><span ng-show="exam.taken" class="label label-warning">Yes</span></p>
